# ROS

./: LICENSE  README.md
OpenCVtests/lab 3/: nav_goal.cpp
OpenCVtests/lab1_2/: LineDetect  LineDetect.cpp  LineDetect.cpp~
OpenCVtests/lab1_3/: CMakeCache.txt  Makefile  ObjectDetect  ObjectDetect.cpp  ObjectDetect.cpp~  cmake_install.cmake
ros_wall_traveller/: CMakeLists.txt  package.xml
ros_wall_traveller/src/: ros_wall_traveller.cpp  ros_wall_traveller.cpp~
